--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 <!--			<artifactId>spring-cloud-starter-config</artifactId>-->
 <!--		</dependency>-->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
+			<groupId>org.springframework.cloud</groupId> <!-- já tem o load balancer -->
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
