--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,21 @@
 			<version>2.8.8</version><!-- Dá erro se não colocar a versão pois o springboot não gerencia por padrão! -->
 		</dependency>
 		<!-- Fim Swagger -->
+<!--		https://mvnrepository.com/-->
+		<!-- Começo Zipkin + Sleuth + RabbitMQ-->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+		</dependency>
+		<!-- Fim Zipkin + Sleuth + RabbitMQ -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
